results/SVCOMP/4-shot/log-assert6-2024_03_18_06_32_18.txt
import java.util.Random;

class assert6 {
  //@ ensures \random_int >= 0 && \random_int < 1000;
  public static void func() {
    int i = new Random().nextInt();

    if (i >= 1000) if (!(i >= 1000)) assert false;
  }
}
/home/max/Documents/JMLGPT/tmp/assert6.java:4: error: This backslash token is unknown: \random_int
  //@ ensures \random_int >= 0 && \random_int < 1000;
              ^
/home/max/Documents/JMLGPT/tmp/assert6.java:4: error: This backslash token is unknown: \random_int
  //@ ensures \random_int >= 0 && \random_int < 1000;
                                  ^
2 errors

